# rust-axum-template

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  config.ini  config.ini.example  env.example
.github/workflows/: ci.yml
assets/: openapi.json
docker/: Dockerfile  config.docker.ini  docker-compose.yml
migrations/: 00001_init.sql
src/: config.rs  lib.rs  main.rs
src/api/: auth.rs  mod.rs  routes.rs  state.rs
src/application/: greeting.rs  health.rs  mod.rs
src/domain/: error.rs  greeting.rs  health.rs  mod.rs
src/domain/ports/: health.rs  mod.rs
src/infrastructure/: database.rs  health_adapter.rs  mod.rs  redis_client.rs
